Change admin table, category v3

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -18,6 +18,7 @@ $white: white;
 $light-green: #b3d4fc;
 $gray_c: #ccc;
 $gray_box_sha: rgba(0, 0, 0, 0.075);
+$gray_box_sha2: rgba(102, 175, 233, 0.6);
 $bl_3: #333;
 $bl_6: #666;
 $bl_5: #555;
