--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -139,6 +139,63 @@ footer {
   margin-top: 45px;
   @include box_sizing;
 }
+/* combobox autocomplete */
+.custom-combobox {
+  position: relative;
+  display: block;
+  &-input {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: $bl_5;
+    background-color: $white;
+    background-image: none;
+    border: 1px solid $gray_c;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px $gray_box_sha;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+
+    &:focus {
+      border-color: #66afe9;
+      outline: 0;
+      box-shadow: inset 0 1px 1px $gray_box_sha, 0 0 8px $gray_box_sha2;
+    }
+    &.ui-state-default {
+      background: transparent;
+    }
+  }
+
+  &-toggle {
+    cursor: pointer;
+    &.glyphicon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: 0;
+      width: 34px;
+      height: 34px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      &:hover {
+        background: $blue;
+        text-decoration: none;
+        color: $white;
+      }
+    }
+  }
+}
+
+.ui-menu {
+  z-index: 99999!important;
+  max-height: 250px!important;
+  overflow: scroll;
+}
 
 /* sidebar */
 .wrap-admin {
@@ -382,9 +439,15 @@ span.picture {
   text-align: left;
   cursor: pointer;
   position: relative;
+  z-index: 1;
   border-bottom: 1px solid $gray_border;
   &:hover {
     background: $light-green;
+    .dropdown {
+      display: block;
+      transform: scale(1);
+      transition: all ease 0.5s;
+    }
   }
   .line-dot {
     position: absolute;
@@ -397,9 +460,9 @@ span.picture {
   .caret-custom {
     position: absolute;
     display: block;
-    right: 0;
+    left: 0;
     line-height: 50px;
-    width: 50px;
+    width: 27px;
     top: 0;
     text-align: center;
     z-index: 1;
@@ -408,11 +471,27 @@ span.picture {
       color: $red;
     }
   }
+  .dropdown {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    transform: scale(0);
+    transition: all ease 0.5s;
+    z-index: 99999;
+    &-menu {
+      background: $white;
+      top: 0;
+      transform: translateY(-50%);
+      left: 105%;
+      z-index: 99999;
+    }
+  }
 }
 
 .cat-link {
   display: block;
   padding: 15px 16px;
+  padding-left: 25px;
   color: $bl_3;
   &:hover {
     color: $bl_6;
@@ -421,7 +500,7 @@ span.picture {
 }
 
 .list-cat-child {
-  margin-left: 20px;
+  margin-left: 10px;
   display: none;
   .category-item {
     .cat-link {
