--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -10,8 +10,10 @@
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control" %>
 
-        <%= f.label :parent_id %>
-        <%= f.select :parent_id, options_for_select(category_options(@categories)), {include_blank: t("option.root")} %>
+        <div class="ui-widget mb-15">
+          <%= f.label :parent_id %>
+          <%= f.select :parent_id, options_for_select(category_options @categories), {include_blank: t("option.search_cat")} %>
+        </div>
 
         <%= f.submit t("button.save"), class: "btn btn-primary" %>
         <%= link_to t("button.back"), :back, class: "btn btn-default" %>
