--- a/app/views/admin/savings/index.html.erb
+++ b/app/views/admin/savings/index.html.erb
@@ -7,21 +7,24 @@
       <%= t "table.title.savings" %>
     </div>
     <div class="panel-body">
+      <%= render "admin/shared/form_search", search: Settings.search2 %>
       <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
             <tr>
-              <th><%= t "table.head.id" %></th>
+              <th>#</th>
               <th><%= t "table.head.savings" %></th>
               <th></th>
             </tr>
           </thead>
-          <tbody>
-            <%= render @savings %>
+          <tbody id="table-saving">
+            <%= render "admin/savings/saving", savings: @savings %>
           </tbody>
         </table>
       </div>
-      <%= paginate @savings, theme: "twitter-bootstrap-3" %>
+      <div id="paginator">
+        <%= paginate @savings, theme: "twitter-bootstrap-3" %>
+      </div>
     </div>
   </div>
 </div>
