--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,12 +1,14 @@
-<tr class="odd gradeX">
-  <td><%= user.id %></td>
-  <td><%= user.name %></td>
-  <td><%= user.username %></td>
-  <td><%= user.email %></td>
-  <td><%= user.phone %></td>
-  <td><%= user.address %></td>
-  <td class="btn-cell">
-    <%= link_to t("button.edit"), edit_admin_user_path(user), class: "btn btn-success" %>
-    <%= link_to t("button.delete"), admin_user_path(user), class: "btn btn-danger", method: :delete, data: { confirm: t("alert.confirm_del") } %>
-  </td>
-</tr>
+<% users.each_with_index do |user, index| %>
+  <tr class="odd gradeX">
+    <td><%= page_index params[:page], index, Settings.users_per_page %></td>
+    <td><%= user.name %></td>
+    <td><%= user.username %></td>
+    <td><%= user.email %></td>
+    <td><%= user.phone %></td>
+    <td><%= user.address %></td>
+    <td class="btn-cell">
+      <%= link_to t("button.edit"), edit_admin_user_path(user), class: "btn btn-success" %>
+      <%= link_to t("button.delete"), admin_user_path(user), class: "btn btn-danger", method: :delete, data: { confirm: t("alert.confirm_del") } %>
+    </td>
+  </tr>
+<% end %>
