--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,11 +9,12 @@
       <%= t "table.title.users" %>
     </div>
     <div class="panel-body">
+      <%= render "admin/shared/form_search", search: Settings.search1 %>
       <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
             <tr>
-              <th><%= t "table.head.id" %></th>
+              <th>#</th>
               <th><%= t "table.head.name" %></th>
               <th><%= t "table.head.username" %></th>
               <th><%= t "table.head.email" %></th>
@@ -22,12 +23,14 @@
               <th></th>
             </tr>
           </thead>
-          <tbody>
-            <%= render @users %>
+          <tbody id="table-user">
+            <%= render "admin/users/user", users: @users %>
           </tbody>
         </table>
       </div>
-      <%= paginate @users, theme: "twitter-bootstrap-3" %>
+      <div id="paginator">
+        <%= paginate @users, theme: "twitter-bootstrap-3" %>
+      </div>
     </div>
   </div>
 </div>
