--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -14,6 +14,13 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane fade active in" id="report">
+      <div class="row mg-top-2">
+      <div class="col-md-8">
+        <div class="alert alert-danger" role="alert"">
+          <p><%= t "month_report.other.need_save" %> <%= standardized(((format_number(@saving_in_year).to_i + format_number(@savings).to_i) /format_number(getMonth()).to_i).abs) %> <%= t "year_report.other.vnd" %> <%= t "month_report.other.complete" %></p>
+        </div>
+      </div>
+      </div>
       <div class="row">
         <div class="col-md-8">
           <div class="panel panel-success">
@@ -137,12 +144,12 @@
       </div>
     </div>
     <div class="tab-pane fade" id="chart">
-      <div class="row" >
+      <div class="row mg-top-2" >
         <div class="col-md-6">
-          <div id="chartContainer_month" style="height: 300px; width: 100%;"></div>
+          <div id="chartContainer_month"></div>
         </div>
         <div class="col-md-6">
-          <div id="barChartContainer_month" style="height: 300px; width: 100%;"></div>
+          <div id="barChartContainer_month"></div>
         </div>
       </div>
     </div>
