--- a/app/views/report/year_report.html.erb
+++ b/app/views/report/year_report.html.erb
@@ -14,10 +14,7 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane fade active in" id="report">
-      <div class="row" id="save_year">
-        <div class="col-md-4">
-          <%= render "shared/table_intense_report" %>
-        </div>
+      <div class="row mg-top-2">
         <div class="col-md-8">
           <div class="panel panel-primary">
             <div class="panel-heading">
@@ -27,6 +24,10 @@
               <%= render "shared/table_year_month" %>
             </div>
           </div>
+        </div>
+        <div class="col-md-4">
+          <%= render "shared/table_intense_report" %>
+            
         </div>
       </div>
   </div>
