--- a/app/views/report/year_report.html.erb
+++ b/app/views/report/year_report.html.erb
@@ -4,11 +4,11 @@
   <ul class="nav nav-tabs" role="tablist">
     <li class="active">
         <a href="#report" role="tab" data-toggle="tab">
-            <icon class="fa fa-home"></icon> Report
+            <span class="glyphicon glyphicon-list-alt"> Report
         </a>
     </li>
     <li><a href="#chart" role="tab" data-toggle="tab">
-        <i class="fa fa-user"></i> Chart
+        <span class="glyphicon glyphicon-blackboard"></span> Chart
         </a>
     </li>
   </ul>
