--- a/app/views/report/month_report.html.erb
+++ b/app/views/report/month_report.html.erb
@@ -4,11 +4,18 @@
   <ul class="nav nav-tabs" role="tablist">
     <li class="active">
         <a href="#report" role="tab" data-toggle="tab">
-            <icon class="fa fa-home"></icon> Report
+            <span class="glyphicon glyphicon-list-alt"></span>
+            <%= t "month_report.title.report" %>
         </a>
     </li>
     <li><a href="#chart" role="tab" data-toggle="tab">
-        <i class="fa fa-user"></i> Chart
+        <span class="glyphicon glyphicon-blackboard"></span>
+        <%= t "month_report.title.chart" %>
+        </a>
+    </li>
+    <li><a href="#recommend" role="tab" data-toggle="tab">
+        <span class="glyphicon glyphicon-education"></span>
+        <%= t "month_report.title.plans" %>
         </a>
     </li>
   </ul>
@@ -30,13 +37,13 @@
             <div class="panel-body">
               <div class="flex-container">
                 <div class="col-md-3 input-group date" data-provide="datepicker1" id="datetimepicker1">
-                  <input type="text" class="form-control">
+                  <input type="text" class="form-control"  placeholder=<%= t "month_report.other.from_date" %>>
                   <div class="input-group-addon">
                       <span class="glyphicon glyphicon-th"></span>
                   </div>
                 </div>
                 <div class="input-group date col-md-3" id="datetimepicker2">
-                  <input type="text" class="form-control">
+                  <input type="text" class="form-control" placeholder=<%= t "month_report.other.to_date" %>>
                   <div class="input-group-addon">
                       <span class="glyphicon glyphicon-th"></span>
                   </div>
@@ -150,6 +157,22 @@
         </div>
         <div class="col-md-6">
           <div id="barChartContainer_month"></div>
+        </div>
+      </div>
+    </div>
+    <div class="tab-pane fade" id="recommend">
+      <div class="row" >
+        <div class="col-md-6 col-md-offset-3 mg-top-2">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h1 class="panel-title">
+                <%= t "recommend.title.recommend_title"%>
+              </h1>
+            </div>
+            <div class="panel-body">
+              <%= render "shared/table_recommend" %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
