Edit, delete transaction v1

--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -1,4 +1,4 @@
-<% @child_cats = category.child_categories %>
+<% @child_cats = get_default_cate category.child_categories %>
 <% if @child_cats.size > Settings.zero %>
   <div class="cat-parent">
     <div class="category-item">
