--- a/app/assets/stylesheets/month_report.scss
+++ b/app/assets/stylesheets/month_report.scss
@@ -103,6 +103,15 @@ table.dataTable tbody {
 
 
 
+.table > thead > tr > th, .table > thead > tr > td,
+.table > tbody > tr > th, .table > tbody > tr > td,
+.table > tfoot > tr > th, .table > tfoot > tr > td {
+  vertical-align: middle;
+  &.icon {
+    text-align: center;
+  }
+}
+
 .flex-container {
   display: flex;
   margin-bottom: 10px;
