--- a/app/views/categories_user/_category_default.html.erb
+++ b/app/views/categories_user/_category_default.html.erb
@@ -1,4 +1,4 @@
-<% @child_cats = category.child_categories %>
+<% @child_cats = get_default_cate category.child_categories %>
 <% if @child_cats.size > Settings.zero %>
   <div class="cat-parent">
     <div class="category-item">
@@ -21,11 +21,7 @@
     </div>
     <div class="list-cat-child">
       <% @child_cats.each do |child_cat| %>
-        <% if check?(child_cat) %>
-          <p></p>
-        <% else %>
-          <%= render "category", category: child_cat %>
-        <% end %>
+        <%= render "category", category: child_cat %>
       <% end %>
     </div>
   </div>
