--- a/app/views/report/year_report.html.erb
+++ b/app/views/report/year_report.html.erb
@@ -4,11 +4,13 @@
   <ul class="nav nav-tabs" role="tablist">
     <li class="active">
         <a href="#report" role="tab" data-toggle="tab">
-            <span class="glyphicon glyphicon-list-alt"> Report
+            <span class="glyphicon glyphicon-list-alt"></span>
+            <%= t "month_report.title.report" %>
         </a>
     </li>
     <li><a href="#chart" role="tab" data-toggle="tab">
-        <span class="glyphicon glyphicon-blackboard"></span> Chart
+        <span class="glyphicon glyphicon-blackboard"></span>
+        <%= t "month_report.title.chart" %>
         </a>
     </li>
   </ul>
