--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -288,15 +288,12 @@ footer {
 }
 
 #footer {
+  margin-top: 20px;
   text-align: center;
   padding: 15px 0;
   background: $gray_bg;
   border-top: 1px solid $gray_border;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: 99999;
+
   p {
     color: $red;
     margin-bottom: 0;
