--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,7 @@
               <li><%= link_to t("users.profile"), current_user %></li>
               <li><%= link_to t("users.setting"), edit_user_path(current_user) %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to t("session.logout"), logout_path, method: :delete %></li>
+              <li><%= link_to t("sessions.logout"), logout_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
